--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,4 +6,4 @@ test:
 
 production:
   adapter: redis
-  url: redis://localhost:6379/1
+  url: redis://redistogo:b4a653f2a962aa5c6949dd6bf2eb69cb@greeneye.redistogo.com:10251/
